Fix z-indexes in SR

--- a/src/assets/scss/sr-redesign/sr_famous_resume.scss
+++ b/src/assets/scss/sr-redesign/sr_famous_resume.scss
@@ -14,6 +14,8 @@
         margin-top: -80px;
     }
     &--container-dark {
+        position: relative;
+        z-index: 2;
         background-color: #2e3146;
     }
     &--head-image {
